--- a/my-dream-place-app/package.json
+++ b/my-dream-place-app/package.json
@@ -7,9 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^7.2.2",
     "axios": "^1.6.2",
     "pinia": "^2.1.7",
     "vue": "^3.2.13",
+    "vue-datepicker": "^1.3.0",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
